--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0522.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0522.html
@@ -219,16 +219,11 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1946 374 2103 399" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποδει-</ins>
+            <ins title="nlp 2.00">ἀποδεικτικὴ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 419 426 2104 486">
-        <span id="w_41" class="ocr_word" title="bbox 419 448 527 486" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κτικὴ</ins>
-          </span>
-        </span>
         <span id="w_42" class="ocr_word" title="bbox 561 430 603 472" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δέ</ins>
@@ -601,9 +596,14 @@
             <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_114" class="ocr_word" title="bbox 918 861 979 885" lang="grc">
+        <span id="w_114_0" class="ocr_word" title="bbox 918 861 979 885">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατηγορούμενον·</ins>
+            <ins class="alt" title="nlp 2.00">κατη|γορούμενον·</ins>
+          </span>
+        </span>
+        <span id="w_114_1" class="ocr_word" title="bbox 918 861 979 885">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1404 842 1654 895" lang="grc">
@@ -629,11 +629,6 @@
         <span id="w_119" class="ocr_word" title="bbox 1924 858 2060 897" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρώτη</ins>
-          </span>
-        </span>
-        <span id="w_120" class="ocr_word" title="bbox 2089 845 2169 883">
-          <span class="alternatives">
-            <ins title="nlp 2.00">196r</ins>
           </span>
         </span>
       </span>
@@ -1377,16 +1372,11 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1940 1676 2109 1728" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γελαστι-</ins>
+            <ins title="nlp 2.00">γελαστικ[ον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 425 1743 2122 1802">
-        <span id="w_268" class="ocr_word" title="bbox 425 1765 489 1790" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κὸν</ins>
-          </span>
-        </span>
         <span id="w_269" class="ocr_word" title="bbox 525 1750 794 1802" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">κατηγορεῖται</ins>
@@ -1627,7 +1617,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1269 2020 1365 2075" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1397 2036 1467 2075" lang="grc">
@@ -1850,9 +1840,14 @@
             <ins class="alt" title="nlp 1.00">καταπαύσωμεν</ins>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 649 2452 660 2494" lang="grc">
+        <span id="w_357_0" class="ocr_word" title="bbox 649 2452 660 2494">
           <span class="alternatives">
-            <ins title="nlp 2.00">(—σομεν</ins>
+            <ins class="alt" title="nlp 2.00">(—σομεν</ins>
+          </span>
+        </span>
+        <span id="w_357_1" class="ocr_word" title="bbox 649 2452 660 2494">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 840 2450 881 2490">
@@ -1905,11 +1900,6 @@
         <span id="w_367" class="ocr_word" title="bbox 2041 2447 2057 2482" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_368" class="ocr_word" title="bbox 2086 2447 2180 2494">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἄνθρ.</ins>
           </span>
         </span>
       </span>
@@ -2048,9 +2038,14 @@
             <del title="nlp 0.90">alt.</del>
           </span>
         </span>
-        <span id="w_393" class="ocr_word" title="bbox 1431 2580 1590 2613" lang="grc">
+        <span id="w_393_0" class="ocr_word" title="bbox 1431 2580 1590 2613">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατηγορ.</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορ.</ins>
+          </span>
+        </span>
+        <span id="w_393_1" class="ocr_word" title="bbox 1431 2580 1590 2613">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 1617 2568 1697 2602">
@@ -2071,12 +2066,7 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1951 2569 2022 2609" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_398" class="ocr_word" title="bbox 2049 2578 2180 2601" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὑποκειμένου</ins>
+            <ins title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
       </span>
@@ -2233,9 +2223,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 357 2742 2182 2792">
-        <span id="w_427" class="ocr_word" title="bbox 357 2748 410 2781" lang="grc">
+        <span id="w_427_0" class="ocr_word" title="bbox 357 2748 410 2781">
           <span class="alternatives">
-            <ins title="nlp 2.00">18</ins>
+            <ins class="alt" title="nlp 2.00">18.</ins>
+          </span>
+        </span>
+        <span id="w_427_1" class="ocr_word" title="bbox 357 2748 410 2781">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_428" class="ocr_word" title="bbox 432 2748 472 2781">
@@ -2302,11 +2297,6 @@
         <span id="w_440" class="ocr_word" title="bbox 1916 2756 1975 2777" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_441" class="ocr_word" title="bbox 2000 2742 2182 2789">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀνθρώπου</ins>
           </span>
         </span>
       </span>
@@ -2415,12 +2405,7 @@
         </span>
         <span id="w_461_0" class="ocr_word" title="bbox 1131 2865 1274 2909">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_461_1" class="ocr_word" title="bbox 1131 2865 1274 2909">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_462" class="ocr_word" title="bbox 1308 2865 1340 2903" lang="grc">
@@ -2660,7 +2645,7 @@
         </span>
         <span id="w_506" class="ocr_word" title="bbox 1966 3038 1994 3071" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁ</ins>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
       </span>
