--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0579.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0579.html
@@ -181,9 +181,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 889 1343 966 1376">
+        <span id="w_38_0" class="ocr_word" title="bbox 889 1343 966 1376">
           <span class="alternatives">
-            <ins title="nlp 2.00">ψεῶδος</ins>
+            <ins class="alt" title="nlp 2.00">ψεῦδος</ins>
           </span>
         </span>
       </span>
@@ -788,14 +788,14 @@
             <ins title="nlp 2.00">ἀλληγορία</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 349 3159 531 3205" lang="grc">
+        <span id="w_145_0" class="ocr_word" title="bbox 349 3159 531 3205">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ὁμήρου)</ins>
+            <ins class="alt" title="nlp 2.00">(Ὁμήρου)</ins>
           </span>
         </span>
-        <span id="w_146" class="ocr_word" title="bbox 562 3161 661 3203">
+        <span id="w_145_1" class="ocr_word" title="bbox 349 3159 531 3205">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">106,8</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -914,9 +914,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1018 1459 1394 1507">
-        <span id="w_167" class="ocr_word" title="bbox 1018 1459 1243 1507" lang="grc">
+        <span id="w_167_0" class="ocr_word" title="bbox 1018 1459 1243 1507">
           <span class="alternatives">
-            <ins title="nlp 2.00">* ἀλογότης 209,24</ins>
+            <ins class="alt" title="nlp 2.00">*ἀλογότης</ins>
+          </span>
+        </span>
+        <span id="w_167_1" class="ocr_word" title="bbox 1018 1459 1243 1507">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">209,24</ins>
           </span>
         </span>
       </span>
@@ -936,14 +941,14 @@
             <ins class="alt" title="nlp 1.00">ἁλουργὲς</ins>
           </span>
         </span>
-        <span id="w_171" class="ocr_word" title="bbox 1591 1523 1742 1569" lang="grc">
+        <span id="w_171_0" class="ocr_word" title="bbox 1591 1523 1742 1569">
           <span class="alternatives">
-            <ins title="nlp 2.00">(χρῶμα)</ins>
+            <ins class="alt" title="nlp 2.00">(χρῶμα)</ins>
           </span>
         </span>
-        <span id="w_172" class="ocr_word" title="bbox 1784 1525 1910 1569">
+        <span id="w_171_1" class="ocr_word" title="bbox 1591 1523 1742 1569">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">163,27</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1078,24 +1083,29 @@
             <ins class="alt" title="nlp 1.00">ἀμφίβολος.</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1315 2164 1368 2200" lang="grc">
+        <span id="w_191_0" class="ocr_word" title="bbox 1315 2164 1368 2200">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπ’</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ᾿</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1389 2167 1565 2212" lang="grc">
+        <span id="w_191_1" class="ocr_word" title="bbox 1315 2164 1368 2200">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀμδίβολος. ἐπ’ ἀμφιβόλῳ λέγειν</ins>
+            <ins class="alt" title="nlp 2.00">ἀμφιβόλῳ</ins>
+          </span>
+        </span>
+        <span id="w_192_0" class="ocr_word" title="bbox 1389 2167 1565 2212">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λέγειν</ins>
+          </span>
+        </span>
+        <span id="w_192_1" class="ocr_word" title="bbox 1389 2167 1565 2212">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1711 2169 1832 2209">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">108,13</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1874 2184 1912 2205" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1105,9 +1115,14 @@
             <ins class="alt" title="nlp 1.00">ἀμφίβολον</ins>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 1308 2225 1664 2272" lang="grc">
+        <span id="w_196_0" class="ocr_word" title="bbox 1308 2225 1664 2272">
           <span class="alternatives">
-            <ins title="nlp 2.00">opp. ὁμολογούμενον</ins>
+            <ins class="alt" title="nlp 2.00">opp.</ins>
+          </span>
+        </span>
+        <span id="w_196_1" class="ocr_word" title="bbox 1308 2225 1664 2272">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁμολογούμενον</ins>
           </span>
         </span>
         <span id="w_197" class="ocr_word" title="bbox 1678 2228 1912 2272">
@@ -1182,8 +1197,7 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1344 2353 1409 2376">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1440 2343 1562 2385">
