--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0660.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0660.html
@@ -85,17 +85,17 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 906 204 1069 259" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βαδίζειν</ins>
+            <ins class="alt" title="nlp 2.00">βαδίζειν’</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 1084 204 1092 218">
+        <span id="w_16_0" class="ocr_word" title="bbox 1131 203 1212 258">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">#x003C;καὶ</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1131 203 1212 258" lang="grc">
+        <span id="w_16_1" class="ocr_word" title="bbox 1131 203 1212 258">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ΚΑῚ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1243 221 1267 258" lang="grc">
@@ -123,41 +123,21 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπον</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 1987 209 2040 249" lang="grc">
+        <span id="w_22_0" class="ocr_word" title="bbox 1987 209 2040 249">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐν-</ins>
+            <ins class="alt" title="nlp 2.00">ἐνδέχεται</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 2061 222 2078 246">
+        <span id="w_22_1" class="ocr_word" title="bbox 1987 209 2040 249">
           <span class="alternatives">
-            <ins title="nlp 2.00">f.</ins>
-          </span>
-        </span>
-        <span id="w_24" class="ocr_word" title="bbox 2090 219 2141 247">
-          <span class="alternatives">
-            <ins title="nlp 2.00">75r</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 399 270 2067 330">
-        <span id="w_25" class="ocr_word" title="bbox 399 288 552 326" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέχεται</ins>
-          </span>
-        </span>
         <span id="w_26" class="ocr_word" title="bbox 585 273 748 328" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βαδίζειν</ins>
-          </span>
-        </span>
-        <span id="w_27" class="ocr_word" title="bbox 761 270 769 285">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 779 272 795 327">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">βαδίζειν’#x003E;</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 826 289 887 314" lang="grc">
@@ -262,18 +242,18 @@
             <ins title="nlp 2.00">ἀπόφασιν</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 2014 362 2069 386" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 2014 362 2069 386">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν-</ins>
+            <ins class="alt" title="nlp 2.00">῾οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_49_1" class="ocr_word" title="bbox 2014 362 2069 386">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐνδέχεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 399 410 2068 468">
-        <span id="w_50" class="ocr_word" title="bbox 399 424 553 464" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέχεται</ins>
-          </span>
-        </span>
         <span id="w_51" class="ocr_word" title="bbox 583 425 705 450" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντα</ins>
@@ -343,12 +323,7 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1264 480 1428 534" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">βαδίζειν ’ </ins>
-          </span>
-        </span>
-        <span id="w_65" class="ocr_word" title="bbox 1461 513 1470 530">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">βαδίζειν ’ ,</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1503 481 1565 520" lang="grc">
@@ -841,9 +816,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1094 1278 1368 1334">
-        <span id="w_159" class="ocr_word" title="bbox 1094 1279 1286 1334">
+        <span id="w_159_0" class="ocr_word" title="bbox 1094 1279 1286 1334">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; Πρᾶξις γ&amp;#x77&amp;#x003E;2; . &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">#x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 1094 1279 1286 1334">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γ#x772;.#x003E;</ins>
           </span>
         </span>
       </span>
@@ -987,7 +967,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 842 1668 866 1700">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins title="nlp 2.00">#x772;</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 894 1660 1152 1714" lang="grc">
@@ -1020,9 +1000,9 @@
             <ins class="alt" title="nlp 1.00">ἀναγκαίου</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1987 1675 2072 1700" lang="grc">
+        <span id="w_194_0" class="ocr_word" title="bbox 1987 1675 2072 1700">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑπομἐνην</ins>
+            <ins class="alt" title="nlp 2.00">ἑπομένην</ins>
           </span>
         </span>
       </span>
@@ -1218,9 +1198,14 @@
             <ins class="alt" title="nlp 2.00">καταφάσεσι</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 871 1933 955 1989">
+        <span id="w_232_0" class="ocr_word" title="bbox 871 1933 955 1989">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; τῇ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῇ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 871 1933 955 1989">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 977 1950 1044 1975" lang="grc">
@@ -1263,18 +1248,8 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 1983 1934 2073 1974" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 404 2002 2073 2060">
-        <span id="w_242" class="ocr_word" title="bbox 404 2005 520 2060" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσει</ins>
-          </span>
-        </span>
         <span id="w_243" class="ocr_word" title="bbox 549 2020 615 2045" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -1476,9 +1451,14 @@
             <ins title="nlp 2.00">῾ δυνατὸν</ins>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1494 2207 1630 2249">
+        <span id="w_282_0" class="ocr_word" title="bbox 1494 2207 1630 2249">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶναι ’ ,</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι᾿.</ins>
+          </span>
+        </span>
+        <span id="w_282_1" class="ocr_word" title="bbox 1494 2207 1630 2249">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1678 2225 1708 2248" lang="grc">
@@ -1499,11 +1479,6 @@
         <span id="w_286" class="ocr_word" title="bbox 1875 2208 1995 2262" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγεις</ins>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 2017 2224 2073 2248" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
       </span>
@@ -1641,14 +1616,14 @@
             <ins class="alt" title="nlp 1.00">ἀναγκαῖον</ins>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 1497 2558 1575 2601">
+        <span id="w_311_0" class="ocr_word" title="bbox 1497 2558 1575 2601">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; μὴ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;μὴ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 1603 2556 1682 2590" lang="grc">
+        <span id="w_311_1" class="ocr_word" title="bbox 1497 2558 1575 2601">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1889,8 +1864,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 400 3087 557 3120">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Amnion,</ins>
-            <del title="nlp 0.90">Amnion,</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 583 3086 641 3120">
@@ -2002,8 +1976,7 @@
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1446 3153 1562 3176">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lasura</ins>
-            <del title="nlp 0.90">lasura</del>
+            <ins title="nlp 2.00">rasura</ins>
           </span>
         </span>
         <span id="w_377" class="ocr_word" title="bbox 1587 3143 1612 3175">
