--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0523.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0523.html
@@ -165,12 +165,7 @@
         </span>
         <span id="w_29_0" class="ocr_word" title="bbox 1273 284 1602 338">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κατηγορούμενον</ins>
-          </span>
-        </span>
-        <span id="w_29_1" class="ocr_word" title="bbox 1273 284 1602 338">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενον;</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1655 301 1780 339" lang="grc">
@@ -1262,9 +1257,9 @@
             <ins class="alt" title="nlp 1.00">ἄτομα</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 1855 1453 1934 1488">
+        <span id="w_241_0" class="ocr_word" title="bbox 1855 1453 1934 1488">
           <span class="alternatives">
-            <ins title="nlp 2.00">196ν</ins>
+            <ins class="alt" title="nlp 2.00">196v</ins>
           </span>
         </span>
       </span>
@@ -1596,7 +1591,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 910 1862 1041 1916" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 1079 1862 1148 1916" lang="grc">
@@ -2230,9 +2225,9 @@
             <ins class="alt" title="nlp 1.00">2089</ins>
           </span>
         </span>
-        <span id="w_425" class="ocr_word" title="bbox 1942 2593 1948 2611">
+        <span id="w_425_0" class="ocr_word" title="bbox 1942 2593 1948 2611">
           <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">2089:</ins>
           </span>
         </span>
       </span>
@@ -2464,9 +2459,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_467" class="ocr_word" title="bbox 1137 2767 1201 2807">
+        <span id="w_467_0" class="ocr_word" title="bbox 1137 2767 1201 2807">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_467_1" class="ocr_word" title="bbox 1137 2767 1201 2807">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_468" class="ocr_word" title="bbox 1226 2777 1265 2798" lang="grc">
@@ -2492,11 +2492,6 @@
         <span id="w_473" class="ocr_word" title="bbox 1688 2761 1725 2793">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">21</ins>
-          </span>
-        </span>
-        <span id="w_474" class="ocr_word" title="bbox 1757 2759 1952 2804" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπαναβεβ.]</ins>
           </span>
         </span>
       </span>
