--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0661.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0661.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 638 133 682 166">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">m</ins>
-            <del title="nlp 0.90">m</del>
+            <ins title="nlp 2.00">IN</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 711 133 747 166">
@@ -35,14 +34,8 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 860 134 1113 167">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTERPRET</ins>
+            <ins class="alt" title="nlp 2.00">INTERPRETATIONE</ins>
             <del title="nlp 0.90">INTERPRET</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 1120 134 1288 167">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ATIONE</ins>
-            <del title="nlp 0.90">ATIONE</del>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1316 133 1438 177">
@@ -150,9 +143,14 @@
             <ins class="alt" title="nlp 1.00">δυνατὸν</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 654 314 789 355" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 654 314 789 355">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶναι ’ ,</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι᾿.</ins>
+          </span>
+        </span>
+        <span id="w_26_1" class="ocr_word" title="bbox 654 314 789 355">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 822 331 885 355" lang="grc">
@@ -193,11 +191,6 @@
         <span id="w_35" class="ocr_word" title="bbox 1648 327 1803 352" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δυνατὸν</ins>
-          </span>
-        </span>
-        <span id="w_36" class="ocr_word" title="bbox 1825 319 1903 347">
-          <span class="alternatives">
-            <ins title="nlp 2.00">f. 75v</ins>
           </span>
         </span>
       </span>
@@ -395,17 +388,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 404 587 498 628" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
-          </span>
-        </span>
-        <span id="w_76" class="ocr_word" title="bbox 511 587 520 602">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_77" class="ocr_word" title="bbox 531 619 540 630">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι’,</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 575 603 668 641" lang="grc">
@@ -438,14 +421,9 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1341 583 1348 598" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 1362 585 1543 625" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀδύνατον</ins>
+            <ins class="alt" title="nlp 2.00">῾ἀδύνατον</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1576 583 1670 622" lang="grc">
@@ -455,16 +433,11 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1728 597 1837 622" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">καταφέσαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 180 650 1809 711">
-        <span id="w_88" class="ocr_word" title="bbox 180 658 293 711" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσει</ins>
-          </span>
-        </span>
         <span id="w_89" class="ocr_word" title="bbox 317 672 449 696" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἕπεται</ins>
@@ -475,14 +448,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 537 656 544 670">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_92" class="ocr_word" title="bbox 559 656 760 708" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναγκαῖον</ins>
+            <ins class="alt" title="nlp 2.00">῾ἀναγκαῖον</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 785 671 836 708" lang="grc">
@@ -547,29 +515,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_105" class="ocr_word" title="bbox 427 724 434 738" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_106" class="ocr_word" title="bbox 449 728 652 777" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναγκαῖον</ins>
+            <ins class="alt" title="nlp 2.00">῾ἀναγκαῖον</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 676 739 771 763" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
-          </span>
-        </span>
-        <span id="w_108" class="ocr_word" title="bbox 784 723 792 737">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 804 756 811 773">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι’,</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 844 724 1094 777" lang="grc">
@@ -602,14 +555,9 @@
             <ins class="alt" title="nlp 1.00">λέγουσα</ins>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 1709 716 1716 730" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 1731 732 1838 769" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναγκαῖον</ins>
+            <ins title="nlp 2.00">῾ἀναγκαῖον</ins>
           </span>
         </span>
       </span>
@@ -758,29 +706,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 797 926 805 941" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_148" class="ocr_word" title="bbox 818 943 974 967" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυνατὸν</ins>
+            <ins class="alt" title="nlp 2.00">῾δυνατὸν</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 997 933 1090 966" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
-          </span>
-        </span>
-        <span id="w_150" class="ocr_word" title="bbox 1104 925 1111 940">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 1123 957 1133 974">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι’,</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1165 926 1224 965" lang="grc">
@@ -1090,16 +1023,11 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1753 1261 1842 1300" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποφάσεως,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 1335 1841 1395">
-        <span id="w_211" class="ocr_word" title="bbox 184 1341 352 1395" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσεως,</ins>
-          </span>
-        </span>
         <span id="w_212" class="ocr_word" title="bbox 385 1339 545 1394" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐδείχθη</ins>
@@ -1155,23 +1083,18 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_223" class="ocr_word" title="bbox 1712 1345 1736 1368">
+        <span id="w_223_0" class="ocr_word" title="bbox 1712 1345 1736 1368">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1766 1343 1841 1368" lang="grc">
+        <span id="w_223_1" class="ocr_word" title="bbox 1712 1345 1736 1368">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δια-</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 1400 1843 1462">
-        <span id="w_225" class="ocr_word" title="bbox 184 1410 390 1462" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γράμματι,</ins>
-          </span>
-        </span>
         <span id="w_226" class="ocr_word" title="bbox 424 1407 484 1448" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
@@ -1224,16 +1147,11 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1733 1411 1843 1437" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">καταφέσει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 1466 1845 1529">
-        <span id="w_237" class="ocr_word" title="bbox 186 1478 299 1517" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσει</ins>
-          </span>
-        </span>
         <span id="w_238" class="ocr_word" title="bbox 331 1493 396 1516" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὐ</ins>
@@ -1755,9 +1673,14 @@
             <ins class="alt" title="nlp 1.00">μεταθέσεως</ins>
           </span>
         </span>
-        <span id="w_340" class="ocr_word" title="bbox 1733 2026 1823 2051" lang="grc">
+        <span id="w_340_0" class="ocr_word" title="bbox 1733 2026 1823 2051">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπό-</ins>
+            <ins class="alt" title="nlp 2.00">ἀποφασιν</ins>
+          </span>
+        </span>
+        <span id="w_340_1" class="ocr_word" title="bbox 1733 2026 1823 2051">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1844 2021 1861 2045">
@@ -1765,18 +1688,8 @@
             <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 1875 2018 1923 2046">
-          <span class="alternatives">
-            <ins title="nlp 2.00">76r</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 192 2081 1851 2149">
-        <span id="w_343" class="ocr_word" title="bbox 192 2107 304 2149" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φασιν</ins>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 337 2108 404 2146" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -2067,16 +1980,11 @@
         </span>
         <span id="w_400" class="ocr_word" title="bbox 1677 2351 1853 2405" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαγράμ-</ins>
+            <ins title="nlp 2.00">διαγράμματι.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 2423 1851 2485">
-        <span id="w_401" class="ocr_word" title="bbox 196 2452 294 2476" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ματι.</ins>
-          </span>
-        </span>
         <span id="w_402" class="ocr_word" title="bbox 343 2451 380 2474" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -2462,7 +2370,7 @@
         </span>
         <span id="w_476" class="ocr_word" title="bbox 1846 2887 1926 2920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Am-</ins>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
       </span>
@@ -2475,13 +2383,7 @@
         </span>
         <span id="w_478" class="ocr_word" title="bbox 323 2960 388 2994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">190</ins>
-          </span>
-        </span>
-        <span id="w_479" class="ocr_word" title="bbox 397 2971 412 2987">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins class="alt" title="nlp 2.00">190v</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 546 2958 586 2991">
@@ -2563,8 +2465,7 @@
         </span>
         <span id="w_494" class="ocr_word" title="bbox 696 3016 736 3049">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span id="w_495" class="ocr_word" title="bbox 903 3012 946 3046">
@@ -2606,17 +2507,11 @@
         </span>
         <span id="w_502" class="ocr_word" title="bbox 1872 3013 1926 3035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">su-</ins>
+            <ins title="nlp 2.00">superscri.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 127 3101 1921 3158">
-        <span id="w_503" class="ocr_word" title="bbox 127 3124 253 3158">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perscr.</ins>
-            <del title="nlp 0.90">superscr.</del>
-          </span>
-        </span>
         <span id="w_504" class="ocr_word" title="bbox 278 3113 320 3146">
           <span class="alternatives">
             <ins title="nlp 2.00">Ρ1</ins>
