--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0580.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0580.html
@@ -359,14 +359,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 305 1373 754 1417">
-        <span id="w_57_0" class="ocr_word" title="bbox 305 1373 605 1411">
+        <span id="w_57_0_0" class="ocr_word" title="bbox 305 1373 605 1411">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">*ἀντανίσωσις</ins>
           </span>
         </span>
-        <span id="w_57_1" class="ocr_word" title="bbox 305 1373 605 1411">
+        <span id="w_57_0_1" class="ocr_word" title="bbox 305 1373 605 1411">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">214,11</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -443,19 +443,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 308 1609 1217 1657">
-        <span id="w_70" class="ocr_word" title="bbox 308 1609 705 1655" lang="grc">
+        <span id="w_70_0" class="ocr_word" title="bbox 308 1609 705 1655">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἀντιδιαιέτικός.</ins>
+            <ins class="alt" title="nlp 2.00">*ἀντιδιαιρετικός.</ins>
+          </span>
+        </span>
+        <span id="w_70_1" class="ocr_word" title="bbox 308 1609 705 1655">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 763 1611 1031 1657" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀντιδιαιρετικαὶ</ins>
-          </span>
-        </span>
-        <span id="w_72" class="ocr_word" title="bbox 1063 1609 1217 1656" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφοραί</ins>
           </span>
         </span>
       </span>
@@ -1400,16 +1400,21 @@
             <ins class="alt" title="nlp 1.00">51,7</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1990 1252 2115 1290" lang="grc">
+        <span id="w_242_0" class="ocr_word" title="bbox 1990 1252 2115 1290">
           <span class="alternatives">
-            <ins title="nlp 2.00">κύκλος—τετράγωνος</ins>
+            <ins class="alt" title="nlp 2.00">κύκλος—</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1353 1310 2163 1360">
-        <span id="w_244" class="ocr_word" title="bbox 1589 1314 1689 1354">
+        <span id="w_244_0" class="ocr_word" title="bbox 1589 1314 1689 1354">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">62,11</ins>
+            <ins class="alt" title="nlp 2.00">τετράγωνος</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 1589 1314 1689 1354">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">62,11</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1707 1323 1757 1357">
@@ -1745,14 +1750,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1269 2378 1676 2428">
-        <span id="w_303_0" class="ocr_word" title="bbox 1269 2381 1545 2428">
+        <span id="w_303_0_0" class="ocr_word" title="bbox 1269 2381 1545 2428">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">*αὐθόριστος</ins>
           </span>
         </span>
-        <span id="w_303_1" class="ocr_word" title="bbox 1269 2381 1545 2428">
+        <span id="w_303_0_1" class="ocr_word" title="bbox 1269 2381 1545 2428">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">14,23</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1767,9 +1772,14 @@
             <ins class="alt" title="nlp 1.00">184,11</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1819 2437 1900 2470" lang="grc">
+        <span id="w_306_0" class="ocr_word" title="bbox 1819 2437 1900 2470">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐθυπόστατοι</ins>
+            <ins class="alt" title="nlp 2.00">ἰδέαι</ins>
+          </span>
+        </span>
+        <span id="w_306_1" class="ocr_word" title="bbox 1819 2437 1900 2470">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐθυπόστατοι</ins>
           </span>
         </span>
       </span>
@@ -1874,9 +1884,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1274 2726 2175 2776">
-        <span id="w_324" class="ocr_word" title="bbox 1274 2734 1425 2771" lang="grc">
+        <span id="w_324_0" class="ocr_word" title="bbox 1274 2734 1425 2771">
           <span class="alternatives">
-            <ins title="nlp 2.00">*αὐσὸς</ins>
+            <ins class="alt" title="nlp 2.00">*αὐσὸς</ins>
+          </span>
+        </span>
+        <span id="w_324_1" class="ocr_word" title="bbox 1274 2734 1425 2771">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1458 2745 1492 2766" lang="grc">
@@ -1907,11 +1922,6 @@
         <span id="w_330" class="ocr_word" title="bbox 1999 2741 2037 2762" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_331" class="ocr_word" title="bbox 2069 2726 2175 2773" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀτμόν</ins>
           </span>
         </span>
       </span>
